--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,12 +1,18 @@
 name: ECS Starter CD main
+
 on:
   push:
     branches: ["main"]
+
+permissions:
+  contents: read
 
 jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    environment: production
+
     steps:
       - name: Checkout
         uses: actions/checkout@main
@@ -33,6 +39,7 @@ jobs:
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
+
 
       - name: Fill in the new image ID in the Amazon ECS task definition
         id: ecs-starter-container
