--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,12 +31,15 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env:
+          JWT_SECRET: ${{ secrets.JWT_SECRET}}
+          MONGO_URI: ${{ secrets.MONGO_URI}}
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: ${{ secrets.AWS_ECR_REPOSITORY }}
           AWS_REGION: ${{ secrets.AWS_REGION }}
           IMAGE_TAG: ${{ github.sha }}
+
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg JWT_SECRET=${{ secrets.JWT_SECRET}} --build-arg MONGO_URI=${{ secrets.MONGO_URI}} . 
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --build-arg JWT_SECRET=$JWT_SECRET --build-arg MONGO_URI=$MONGO_URI . 
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
