--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,7 +24,7 @@ jobs:
           sed -i "s/<mongo_uri>/$MONGO_URI/g" main.json
         env:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          MONGO_URI: ${{ secrets.$MONGO_URI }}
+          MONGO_URI: ${{ secrets.MONGO_URI }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
