--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,6 +23,8 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: 1.8
+          distribution: 'adopt'
+          architecture: x64
       
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
