--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -24,11 +24,13 @@ jobs:
         with:
           java-version: 1.8
       
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
       
-      - name: Execute Gradle build
-        run: ./gradlew build
+      - name: Build with Gradle
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
+        with:
+          arguments: build
       
       - name: Add secrets to Task Definition
         run: |
