--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
         uses: gradle/gradle-build-action@v2
         with:
           arguments: build
-          gradle-executable: /gradle/
+          gradle-executable: gradle/wrapper/gradle-wrapper.jar
       
       
       - name: Add secrets to Task Definition
